--- a/package.json
+++ b/package.json
@@ -5,7 +5,15 @@
   "main": "dist/index.js",
   "author": "TrayHard <wwwtrayfrost@gmail.com> (https://github.com/TrayHard)",
   "license": "MIT",
-  "keywords": ["jka", "rujka", "jedi academy", "videogames", "star wars", "jedi knight", "jedi knight academy"],
+  "keywords": [
+    "jka",
+    "rujka",
+    "jedi academy",
+    "videogames",
+    "star wars",
+    "jedi knight",
+    "jedi knight academy"
+  ],
   "homepage": "https://github.com/TrayHard/jka-core#readme",
   "bugs": {
     "url": "https://github.com/TrayHard/jka-core/issues",
@@ -23,12 +31,10 @@
     "url": "https://github.com/TrayHard/jka-core"
   },
   "dependencies": {
-    "dotenv": "^16.0.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   },
   "devDependencies": {
-    "@types/dotenv": "^8.2.0",
     "@types/node": "^17.0.15",
     "nodemon": "^2.0.15",
     "ts-node-dev": "^1.1.8"
