--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "type": "git",
     "url": "https://github.com/TrayHard/jka-core"
   },
-  "dependencies": {
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.5"
-  },
+  "files": [
+    "lib/**/*"
+  ],
   "devDependencies": {
     "@types/node": "^17.0.15",
+    "ts-node": "^10.4.0",
     "nodemon": "^2.0.15",
-    "ts-node-dev": "^1.1.8"
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.5"
   }
 }
