--- a/package.json
+++ b/package.json
@@ -21,10 +21,7 @@
     "email": "wwwtrayfrost@gmail.com"
   },
   "scripts": {
-    "start": "node lib/index.js",
-    "start:local": "yarn build && node lib/index.js",
-    "start:watch": "nodemon",
-    "dev": "yarn && ts-node-dev --watch --respawn --transpile-only ./src/index.ts",
+    "dev": "npm install && ts-node-dev --watch --respawn --transpile-only ./src/index.ts",
     "build": "tsc --project ./"
   },
   "repository": {
@@ -36,8 +33,6 @@
   ],
   "devDependencies": {
     "@types/node": "^17.0.15",
-    "ts-node": "^10.4.0",
-    "nodemon": "^2.0.15",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
   }
