--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "email": "wwwtrayfrost@gmail.com"
   },
   "scripts": {
+    "test": "jest",
     "dev": "npm install && ts-node-dev --watch --respawn --transpile-only ./src/index.ts",
     "update:patch": "npm run build && npm version patch && npm publish && git push origin --tags",
     "update:minor": "npm run build && npm version minor && npm publish && git push origin --tags",
@@ -35,7 +36,10 @@
     "lib/**/*"
   ],
   "devDependencies": {
+    "@types/jest": "^29.5.8",
     "@types/node": "^17.0.15",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
   }
