--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.8",
     "@types/node": "^17.0.15",
+    "@types/reflect-metadata": "^0.1.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^1.1.8",
